dividing env between dev and local